# QuickALMASearch

./: example.ipynb  pyproject.toml
quickalmasearch/: helpers.py  main.py
tests/: test_quickalmasearch.py
