[tool.poetry]
name = "quickalmasearch"
version = "0.1.0"
description = ""
authors = ["yyamato-as <yyamato.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
alminer = "^0.1.1"
astropy = "^5.0.2"
astroquery = "^0.4.5"
ipython = "^8.1.1"
lxml = "^4.8.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.10.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
